fix: fix extra padding on exported image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,7 @@ a {
 * {
   box-sizing: border-box;
 }
+
+img {
+  display: inline;
+}
